# sage

./: .gitignore  CMakeLists.txt  Lexer.go  Makefile  Makefile.bak  Makefile.txt  Parser.go  Queue.go  Token.go  add.ll  add.ll.ref  add.sage  build.sage  build.zig  build.zig.zon  compiler.go  comptime_bytecode_architecture.plan.md  example.sage  exec  go.mod  go.sum  main.go  node.go  objfile  output  output.ll  run  sage  sage.out  sage.run  sage_bytecode_manual.md  scratch.sage  source.g  test.ll  test_lex.g  testfile.g  testfile.sage  vision.md  vision.txt
.sage/bytecode/: s.asm
cmd/: main.go
examples/: add.sage  source.sage  testfile.sage
include/: analyzer.h  ascending_list.h  bytecode_builder.h  cfg.h  codegen.h  comptime_manager.h  depgraph.h  error_logger.h  interpreter.h  lexer.h  node_manager.h  parse_node.h  parser.h  platform.h  registers.h  sage_bytecode.h  sage_types.h  sage_value.h  scope_manager.h  symbols.h  token.h
internal/codegen/: BuildSettings.go  IRTypes.go  NodeVisitor.go  SymbolTable.go  compiler.go  errors.go  interpreter.go  names.go
internal/lexer/: Lexer.go  Queue.go  Token.go
internal/parser/: Parser.go  node.go
internal/queues/: Queue.go
internal/tokens/: Token.go
modules/: io  io.sage
sage_modules/: add.sage  basic_math.sage  io.sage  resolution.sage  scratch.sage
src/: allocator.zig  analyzer.cpp  builders.cpp  codegen.cpp  compiler.cpp  compiler_context.cpp  comptime_manager.cpp  depgraph.cpp  error_logger.cpp  fwd_decl_resolution.cpp  interpreter.cpp  lexer.c  lexer.cpp  lexer.zig  main.c  main.cpp  main.zig  node_manager.cpp  parse_node.cpp  parser.cpp  registers.cpp  root.zig  sage_bytecode.cpp  sage_types.cpp  sage_value.cpp  scope_manager.cpp  stack.c  symbols.cpp  token.c  token.cpp  visitor.cpp
src/include/: lexer.h  stack.h  string.h  token.h
tests/: run_tests.jl  test_file.sage  tests.json
tests/golden/positive/: expressions_one.expected  expressions_one.sage  functions_five.sage  functions_four.sage  functions_one.expected  functions_one.sage  functions_seven.sage  functions_six.sage  functions_three.sage  functions_two.sage  fwd_decl_resolution_one.expected  fwd_decl_resolution_one.sage  fwd_decl_resolution_two.expected  fwd_decl_resolution_two.sage  main_test_one.sage  mainfile_calls_main.sage  pointer_deref_one.sage  pointer_deref_two.sage  pointer_ref_one.sage  pointer_ref_two.sage  pointers.sage  primitives.sage  string_literal_test.sage  structs_eight.sage  structs_five.sage  structs_four.sage  structs_one.sage  structs_seven.sage  structs_six.sage  structs_three.sage  structs_two.sage
tests/golden/positive/expected/: expressions_one  functions_five  (+27 more)
